--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ click==8.1.8
 colorama==0.4.6
 distro==1.9.0
 exceptiongroup==1.3.0
-faiss-cpu==1.7.4
+faiss-cpu==1.11.0
 gitdb==4.0.12
 GitPython==3.1.44
 h11==0.16.0
@@ -23,7 +23,7 @@ jsonschema==4.24.0
 jsonschema-specifications==2025.4.1
 MarkupSafe==3.0.2
 narwhals==1.42.1
-numpy<2 
+numpy==2.0.2
 openai==1.88.0
 packaging==25.0
 pandas==2.3.0
@@ -34,7 +34,7 @@ pydantic==2.11.7
 pydantic_core==2.33.2
 pydeck==0.9.1
 python-dateutil==2.9.0.post0
-python-dotenv>=1.0.0
+python-dotenv==1.1.0
 pytz==2025.2
 referencing==0.36.2
 requests==2.32.4
